# wealth-app

./: .gitignore  README.md  docker-compose.yml
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/auth/: AuthContext.tsx  session.ts
apps/web/src/components/: AppShell.tsx  BottomNav.tsx  FormControls.tsx  Modal.tsx  PlaceholderCard.tsx  Sidebar.tsx
apps/web/src/components/forms/: AccountForm.tsx  HoldingForm.tsx  (+2 more)
apps/web/src/graphql/: client.ts  queries.ts  types.ts
apps/web/src/hooks/: useAccounts.ts  useCreateManualAccount.ts  useCreateManualHolding.ts  useCreateManualTransaction.ts  useCreatePlaidLinkToken.ts  useCreateSnapTradeConnectionUrl.ts  useExchangePlaidPublicToken.ts  useHoldings.ts  useImportTransactionsCsv.ts  useLogin.ts  useMonthlySummary.ts  useNetWorthTimeline.ts  useSignUp.ts  useSyncPlaidTransactions.ts  useSyncSnapTradeAccounts.ts  useTransactions.ts  useTriggerMockSync.ts
apps/web/src/lib/: allocation.ts  chart.ts  format.ts  graphql.ts  holdings.ts  nav.ts  transactions.ts
apps/web/src/pages/: AdvisorPage.tsx  CashFlowPage.tsx  HomePage.tsx  LoginPage.tsx  PlaidOAuthPage.tsx  PortfolioPage.tsx  SettingsPage.tsx  TimelinePage.tsx  TransactionsPage.tsx
apps/web/src/plaid/: oauth.ts
infra/migrations/: 0001_initial_schema.sql  0002_provider_connections.sql  0003_chat_messages.sql  001_init.sql
infra/scripts/: backfill_categories.sql
services/api/: .env.example  Cargo.toml
services/api/src/: auth.rs  config.rs  db.rs  graphql.rs  main.rs
services/api/src/providers/: mock.rs  mod.rs  plaid.rs  snaptrade.rs  types.rs
services/api/src/repositories/: accounts.rs  chat_messages.rs  holdings.rs  import_batches.rs  mod.rs  provider_connections.rs  raw_provider_events.rs  snapshots.rs  transactions.rs  users.rs
services/api/src/security/: encryption.rs  mod.rs
services/api/src/services/: chat.rs  csv_import.rs  mod.rs  plaid_sync.rs  provider_sync.rs  snapshots.rs  snaptrade_sync.rs
